--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@fontsource/dm-serif-display": "^4.5.0",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7"
   },
   "devDependencies": {
+    "@fontsource/dm-sans": "^4.5.0",
     "@nuxt/content": "^1.14.0",
     "@nuxtjs/google-fonts": "^1.3.0",
     "@nuxtjs/tailwindcss": "^4.2.0",
