--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
   },
   "devDependencies": {
     "@nuxt/content": "^1.14.0",
+    "@nuxtjs/feed": "^2.0.0",
     "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/google-fonts": "^1.3.0",
     "@nuxtjs/tailwindcss": "^4.2.0",
     "@tailwindcss/typography": "^0.4.1",
-    "dayjs": "^1.10.6",
-    "postcss": "^8.3.5",
-    "yarn": "^1.22.11"
+    "postcss": "^8.3.5"
   }
 }
