--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,5 @@
   "useTabs": false,
   "semi": false,
   "singleQuote": true,
-  "trailingComma": "es5",
-  "bracketSpacing": true
+  "trailingComma": "es5"
 }
