--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxtjs/google-fonts": "^1.3.0",
     "@nuxtjs/tailwindcss": "^4.2.0",
     "@tailwindcss/typography": "^0.4.1",
-    "postcss": "^8.3.5"
+    "postcss": "^8.3.5",
+    "prism-themes": "^1.9.0"
   }
 }
